<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Diva Marine</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello World!</string>
    <string name="hello_android">Hello Android!</string>
    <string name="button_string">Click Here</string>
    <string name="name">Name</string>
    <string name="comment">Comment</string>
    <string name="other">Other</string>
    <string name="email">email</string>
    <string name="submit">Submit</string>
    <string name="blank"></string>
    <string name="twitter">Twitter</string>
    <string name="facebook">Facebook</string>
    <string name="refresh">Refresh</string>
    <string name="changefragment">Change Fragment</string>

</resources>
